# crypto-wedding-sol

./: Anchor.toml  README.md  package-lock.json  package.json
programs/crypto-wedding/: Cargo.toml
programs/crypto-wedding/src/: errors.rs  lib.rs  state.rs  util.rs
programs/crypto-wedding/src/instructions/: cancel_wedding.rs  close_partner.rs  divorce.rs  give_answer.rs  mod.rs  setup_ring.rs  setup_wedding.rs  update_name.rs  update_partner.rs  update_vows.rs
tests/: crypto-wedding.ts  helpers.ts  rings.ts
